--- a/HausBauGbR/pom.xml
+++ b/HausBauGbR/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>7.0.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
     <build>
